--- a/knock02.ipynb
+++ b/knock02.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "knock01.ipynb",
+      "name": "knock02.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM6Z66i9Dp+GRlIk3ZTevhT",
+      "authorship_tag": "ABX9TyNLolSYMcO7D2EsCeRHPQ2/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,25 +27,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wsQtbljm7ZZ0",
+        "id": "VzXW2-bd_AM9",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
-        "outputId": "cd53cdf7-29b5-4f8e-e51e-01995a161dbb"
+        "outputId": "6fa313d1-d9a3-4c7e-8290-ae006aff3bfe"
       },
       "source": [
-        "a = \"パタトクカシーー\"\n",
-        "b = a[::2]\n",
-        "print(b)"
+        "a = \"パトカー\"\n",
+        "b = \"タクシー\"\n",
+        "c = \"\"\n",
+        "for(a,b) in zip(a,b):\n",
+        "  c += a + b\n",
+        "print(c)"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "パトカー\n"
+            "パタトクカシーー\n"
           ],
           "name": "stdout"
         }
