--- a/knock00.ipynb
+++ b/knock00.ipynb
@@ -6,7 +6,7 @@
       "name": "knock00.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMsbEYWsumAjS11ZAxmSoeb",
+      "authorship_tag": "ABX9TyPBnWmN4GaM/UqzfkwRvdp4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,28 +26,38 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zZ2pRMlJdw1_",
+        "colab_type": "text"
+      },
+      "source": [
+        "文字列\"stressed\"の文字を逆に（末尾から先頭に向かって）並べた文字列を得よ．"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "KTZLXl6WzKkk",
         "colab_type": "code",
-        "outputId": "57be3416-0eb2-4187-8d82-c96a26aa7544",
+        "outputId": "7f0b3984-07e6-48a2-99c3-1ef825925b3b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 34
         }
       },
       "source": [
         "a = \"stressed\"\n",
         "#スライス処理\n",
-        "b = a[::1]  #[開始位置 : 終了位置 : 取り出し方]\n",
+        "b = a[::-1]  #[開始位置 : 終了位置 : 取り出し方]\n",
         "print(b)"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "stressed\n"
+            "desserts\n"
           ],
           "name": "stdout"
         }
