「パタトクカシーー」という文字列の1,3,5,7文字目を取り出して連結した文字列を得よ．

--- a/knock01.ipynb
+++ b/knock01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "knock01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM6Z66i9Dp+GRlIk3ZTevhT",
+      "authorship_tag": "ABX9TyNuXFUkJdM62RiBvTBwszOS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,22 +25,33 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wRr5nRsEeHrH",
+        "colab_type": "text"
+      },
+      "source": [
+        "「パタトクカシーー」という文字列の1,3,5,7文字目を取り出して連結した文字列を得よ．"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "wsQtbljm7ZZ0",
         "colab_type": "code",
+        "outputId": "cd53cdf7-29b5-4f8e-e51e-01995a161dbb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "cd53cdf7-29b5-4f8e-e51e-01995a161dbb"
+        }
       },
       "source": [
         "a = \"パタトクカシーー\"\n",
-        "b = a[::2]\n",
+        "#スライス処理\n",
+        "b = a[::2]  #[初めから : 最後まで : 2個飛ばし]\n",
         "print(b)"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
