「パトカー」＋「タクシー」の文字を先頭から交互に連結して文字列「パタトクカシーー」を得よ.

--- a/knock02.ipynb
+++ b/knock02.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "knock02.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNLolSYMcO7D2EsCeRHPQ2/",
+      "authorship_tag": "ABX9TyPN9lsC4ihmuW325uT4YpNF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,25 +25,36 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qzOo08tsgxwZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "「パトカー」＋「タクシー」の文字を先頭から交互に連結して文字列「パタトクカシーー」を得よ"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "VzXW2-bd_AM9",
         "colab_type": "code",
+        "outputId": "f7e23ab8-d978-4f00-c35c-3675c69555a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
-        },
-        "outputId": "6fa313d1-d9a3-4c7e-8290-ae006aff3bfe"
+          "height": 34
+        }
       },
       "source": [
         "a = \"パトカー\"\n",
         "b = \"タクシー\"\n",
         "c = \"\"\n",
-        "for(a,b) in zip(a,b):\n",
+        "#繰り返し処理\n",
+        "for (a, b) in zip(a, b): #for 格納先 in 格納するもの\n",
         "  c += a + b\n",
         "print(c)"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
