各単語の（アルファベットの）文字数を先頭から出現順に並べたリストを作成せよ．

--- a/knock03.ipynb
+++ b/knock03.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "knock03.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP7G+Y9aas7YUivjJjGXisc",
+      "authorship_tag": "ABX9TyOi9AdHjgglHHtH070/LClt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,26 +25,37 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "F_S9sBJoi6Rn",
+        "colab_type": "text"
+      },
+      "source": [
+        "各単語の（アルファベットの）文字数を先頭から出現順に並べたリストを作成せよ．"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "1xS264nqAjar",
         "colab_type": "code",
+        "outputId": "050d9f96-cdc7-4b67-e688-95f89b3c23bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 300
-        },
-        "outputId": "bb2de90a-c04b-4ff5-878b-1c32e9368c01"
+          "height": 272
+        }
       },
       "source": [
         "a = \"Now I need a drink, alcoholic of course, after the heavy lectures involving quantum mechanics.\"\n",
         "b = []\n",
-        "\n",
-        "c = a.split(\" \")\n",
-        "for c in c:\n",
-        "  b.append(len(c)-c.count(\",\")-c.count(\".\"))\n",
+        "#分割処理\n",
+        "c = a.split(\" \")  #.split(\"条件\")\n",
+        "for d in c:\n",
+        "#要素追加、サイズ測定、出現個数測定\n",
+        "  b.append(len(d) - c.count(\",\") - c.count(\".\"))  \n",
         "  print(b)"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -53,17 +64,17 @@
             "[3, 1]\n",
             "[3, 1, 4]\n",
             "[3, 1, 4, 1]\n",
-            "[3, 1, 4, 1, 5]\n",
-            "[3, 1, 4, 1, 5, 9]\n",
-            "[3, 1, 4, 1, 5, 9, 2]\n",
-            "[3, 1, 4, 1, 5, 9, 2, 6]\n",
-            "[3, 1, 4, 1, 5, 9, 2, 6, 5]\n",
-            "[3, 1, 4, 1, 5, 9, 2, 6, 5, 3]\n",
-            "[3, 1, 4, 1, 5, 9, 2, 6, 5, 3, 5]\n",
-            "[3, 1, 4, 1, 5, 9, 2, 6, 5, 3, 5, 8]\n",
-            "[3, 1, 4, 1, 5, 9, 2, 6, 5, 3, 5, 8, 9]\n",
-            "[3, 1, 4, 1, 5, 9, 2, 6, 5, 3, 5, 8, 9, 7]\n",
-            "[3, 1, 4, 1, 5, 9, 2, 6, 5, 3, 5, 8, 9, 7, 9]\n"
+            "[3, 1, 4, 1, 6]\n",
+            "[3, 1, 4, 1, 6, 9]\n",
+            "[3, 1, 4, 1, 6, 9, 2]\n",
+            "[3, 1, 4, 1, 6, 9, 2, 7]\n",
+            "[3, 1, 4, 1, 6, 9, 2, 7, 5]\n",
+            "[3, 1, 4, 1, 6, 9, 2, 7, 5, 3]\n",
+            "[3, 1, 4, 1, 6, 9, 2, 7, 5, 3, 5]\n",
+            "[3, 1, 4, 1, 6, 9, 2, 7, 5, 3, 5, 8]\n",
+            "[3, 1, 4, 1, 6, 9, 2, 7, 5, 3, 5, 8, 9]\n",
+            "[3, 1, 4, 1, 6, 9, 2, 7, 5, 3, 5, 8, 9, 7]\n",
+            "[3, 1, 4, 1, 6, 9, 2, 7, 5, 3, 5, 8, 9, 7, 10]\n"
           ],
           "name": "stdout"
         }
