1, 5, 6, 7, 8, 9, 15, 16, 19番目の単語は先頭の1文字，それ以外の単語は先頭に2文字を取り出し，取り出した文字列から単語の位置（先頭から何番目の単語か）への連想配列（辞書型もしくはマップ型）を作成せよ．

--- a/knock04.ipynb
+++ b/knock04.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "knock04.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOGPAGJxIRWNr92f+8OPMsj",
+      "authorship_tag": "ABX9TyNmzaA2MxevOU9N6LGFixDp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,15 +25,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iEPSH8MWjaxF",
+        "colab_type": "text"
+      },
+      "source": [
+        "1, 5, 6, 7, 8, 9, 15, 16, 19番目の単語は先頭の1文字，それ以外の単語は先頭に2文字を取り出し，取り出した文字列から単語の位置（先頭から何番目の単語か）への連想配列（辞書型もしくはマップ型）を作成せよ．"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "9srHLBP_En7N",
         "colab_type": "code",
+        "outputId": "2ed0ddd9-7c73-46b5-8ff3-a851f12f7485",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "2ed0ddd9-7c73-46b5-8ff3-a851f12f7485"
+        }
       },
       "source": [
         "a =\"Hi He Lied Because Boron Could Not Oxidize Fluorine. New Nations Might Also Sign Peace Security Clause. Arthur King Can.\"\n",
@@ -41,7 +51,7 @@
         "sentou =(1, 5, 6, 7, 8, 9, 15, 16, 19)\n",
         "\n",
         "c =a.split(\" \")\n",
-        "for (num,d) in enumerate(c,1):\n",
+        "for (num,d) in enumerate(c,1):  #emumerate(要素 , インテックス番号)\n",
         "  if num in sentou:\n",
         "    b[d[0:1]]=num\n",
         "  else:\n",
@@ -52,7 +62,7 @@
         "\n",
         "print(b)\n"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
