Colaboratory を使用して作成しました

--- a/knock06.ipynb
+++ b/knock06.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "knock06.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM+znUa37hJkhFMD13W+nu9",
+      "authorship_tag": "ABX9TyNj13GiRLO66harTOSZgho2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,15 +25,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "R01yb8aymRYF",
+        "colab_type": "text"
+      },
+      "source": [
+        "文字bi-gramの集合を，それぞれ, XとYとして求め，XとYの和集合，積集合，差集合を求めよ．さらに，'se'というbi-gramがXおよびYに含まれるかどうかを調べよ．"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "nZHsIxgbRTjd",
         "colab_type": "code",
+        "outputId": "c1f84815-bc25-4c2c-c71e-7c0d1895b82a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
-        },
-        "outputId": "c1f84815-bc25-4c2c-c71e-7c0d1895b82a"
+        }
       },
       "source": [
         "def n_gram(target, n):\n",
@@ -43,24 +53,28 @@
         "\n",
         "  return result\n",
         "\n",
+        "#集合の作成\n",
         "set_x = set(n_gram('paraparaparadise', 2))\n",
         "print('X:' + str(set_x))\n",
         "set_y = set(n_gram('paragraph', 2))\n",
         "print('Y:' + str(set_y))\n",
         "\n",
+        "#和集合\n",
         "set_or = set_x | set_y\n",
         "print('和集合:' + str(set_or))\n",
         "\n",
+        "#積集合\n",
         "set_and = set_x & set_y\n",
         "print('積集合:' + str(set_and))\n",
         "\n",
+        "#差集合\n",
         "set_sub = set_x - set_y\n",
         "print('差集合:' + str(set_sub))\n",
         "\n",
         "print('seがXに含まれる:' + str('se' in set_x))\n",
         "print('seがYに含まれる:' + str('se' in set_y))"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
