引数x, y, zを受け取り「x時のyはz」という文字列を返す関数を実装せよ．さらに，x=12, y="気温", z=22.4として，実行結果を確認せよ．

--- a/knock07.ipynb
+++ b/knock07.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "knock07.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMR7bHOOLl+wXOuKCbfI61L",
+      "authorship_tag": "ABX9TyOOc9RiBbkAUQtFsfXsVajh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,15 +25,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7dwvEYh6nSXm",
+        "colab_type": "text"
+      },
+      "source": [
+        "引数x, y, zを受け取り「x時のyはz」という文字列を返す関数を実装せよ．さらに，x=12, y=\"気温\", z=22.4として，実行結果を確認せよ．"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "L4CyicU1T2Tp",
         "colab_type": "code",
+        "outputId": "b9b34db8-4e3f-4f88-dcbb-87b835f59a00",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b9b34db8-4e3f-4f88-dcbb-87b835f59a00"
+        }
       },
       "source": [
         "def format_string(x, y, z):\n",
@@ -44,7 +54,7 @@
         "z = 22.4\n",
         "print(format_string(x, y, z))"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
