暗号化・復号化

--- a/knock08.ipynb
+++ b/knock08.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "knock08.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOdXLlSxLLDz0Zp3vhooZew",
+      "authorship_tag": "ABX9TyOXEMQuLehrrnr9iMmXoru1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,15 +25,33 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bHN4QN8BobDo",
+        "colab_type": "text"
+      },
+      "source": [
+        "与えられた文字列の各文字を，以下の仕様で変換する関数cipherを実装せよ．\n",
+        "\n",
+        "・英小文字ならば(219 - 文字コード)の文字に置換\n",
+        "\n",
+        "\n",
+        "\n",
+        "・その他の文字はそのまま出力\n",
+        "\n",
+        "この関数を用い，英語のメッセージを暗号化・復号化せよ．"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "9wwMlcpyUjJ3",
         "colab_type": "code",
+        "outputId": "105f897a-2c7b-46d3-feaf-4b27f837b6f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "105f897a-2c7b-46d3-feaf-4b27f837b6f8"
+        }
       },
       "source": [
         "def cipher(target):\n",
@@ -56,7 +74,7 @@
         "if result2 != target:\n",
         "    print('元に戻っていない！？')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
