--- a/knock09.ipynb
+++ b/knock09.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "knock09.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNkqiJqTuMd/WKiOkvZzUjW",
+      "authorship_tag": "ABX9TyOrWstdiOvhjNpDk2C2qc8y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,15 +25,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HAJ6Wjtrnqso",
+        "colab_type": "text"
+      },
+      "source": [
+        "スペースで区切られた単語列に対して，各単語の先頭と末尾の文字は残し，それ以外の文字の順序をランダムに並び替えるプログラムを作成せよ．ただし，長さが４以下の単語は並び替えないこととする."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "73z7HbEE5-Kh",
         "colab_type": "code",
+        "outputId": "10853a39-30d8-4d3f-f9be-bce4ab6f9156",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
-        },
-        "outputId": "942f33d3-5696-4708-813b-fbef02da609d"
+        }
       },
       "source": [
         "import random\n",
@@ -48,20 +58,21 @@
         "         random.shuffle(chr_list)\n",
         "         result.append(word[0] + ''.join(chr_list) + word[-1])\n",
         "\n",
-        "   return ' '.join(result)\n",
+        "#リスト結合\n",
+        "   return ' '.join(result)　#.join(リスト名)\n",
         "\n",
         "target = input('文字列を入力してください　:　')\n",
         "\n",
         "result = Typoglycemia(target)\n",
         "print('変換結果:' + result)"
       ],
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "文字列を入力してください　:　   I couldn't believe that I could actually understand what I was reading : the phenomenal power of the human mind .\n",
-            "変換結果:   I cldno'ut bileeve that I could atlulcay usnretnadd what I was rniadeg : the pmhoenenal pewor of the haumn mind .\n"
+            "文字列を入力してください　:　I couldn't believe that I could actually understand what I was reading : the phenomenal power of the human mind .\n",
+            "変換結果:I cdul'not bevilee that I could aactluly uasednrntd what I was rdianeg : the poneeahnml pweor of the hmaun mind .\n"
           ],
           "name": "stdout"
         }
